minor alignment fix

--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -17,7 +17,7 @@
 
 .mobile-view .post-controls .accepted-text {
   float: left;
-  padding: .6em 0;
+  padding: .7em 0;
 }
 
 .mobile-view .solved-panel {
